<resources>
    <string name="rs">\u20B9</string>
    <string name="cancel">Cancel</string>
    <string name="payment_option">Payment Options</string>
    <string name="auto_close">Auto-closing in</string>
    <string name="auto_close_time">5 sec</string>
    <string name="payment_failed">Payment Failed</string>
    <string name="please_try_again">Please try again.</string>
    <string name="cancel_confirmation_message">If you cancel now, the transaction will be stopped.\nAre you sure you want to proceed?</string>
    <string name="processing_payment">Processing your payment</string>
    <string name="payment_successfull">Yay! Payment Successful.</string>
    <string name="processing_payment_description">We’ll confirm everything in just a few seconds.</string>
    <string name="payment_verification">We’re verifying your payment status.\n Please do not go back or refresh.</string>
    <string name="upi_payment_request">Or get payment request on UPI ID</string>
    <string name="verify_continue">Verify &amp; Continue</string>
    <string name="vpa_enter">Enter UPI ID</string>
    <string name="timer_text">Open your UPI app and complete the payment</string>
    <string name="timer_text2">Please wait while we fetch your payment status</string>
    <string name="timer_cancel_payment">Cancel Payment</string>
    <string name="redeem_points">Redeem points on:</string>
    <string name="eligible_banks">Eligible bank cards for point redemption</string>
    <string name="card_may_have_points">Your card may have points.</string>
    <string name="check_for_points">Check for points!</string>
    <string name="check_points">Check Points</string>
    <string name="card_point_redeem">Your card may have points that you can redeem. </string>
    <string name="pbp_mobile_number">Registered Mobile No. With Bank</string>
    <string name="zero_points">You have 0 points on this card. </string>
    <string name="another_card">Try another card or proceed to pay.</string>
    <string name="checking_point_balance">Checking points balance</string>
    <string name="mobile_code">+91</string>
    <string name="unable_to_check_point">Unable to check points at the moment. </string>
    <string name="please_try_after_some_time">Please try again later or proceed to payment.</string>
    <string name="card_not_eligible">The entered card is not eligible for points redemption. Try another card or proceed to pay.</string>
    <string name="no_points">No points available on the entered card and phone number.<font color='#500080'>Try another number</font></string>
    <string name="try_another">Try another number</string>
    <string name="pay_by_upi">Pay by any UPI app</string>
    <string name="required">(Required)</string>
    <string name="redeem">Redeem</string>
    <string name="card_points"> Card Points</string>
    <string name="get">Get </string>
    <string name="instant_discount">instant discount</string>
    <string name="more_banks">More Banks</string>
    <string name="all_banks">All banks</string>
    <string name="search_banks">Search for your bank</string>
    <string name="axis_bank_code">NB1004</string>
    <string name="hdfc_bank_code">NB1007</string>
    <string name="jk_bank_code">NB1015</string>
    <string name="icici_bank_code">NB1016</string>
    <string name="federal_bank_code">NB1029</string>
    <string name="karnataka_bank_code">NB1133</string>
    <string name="corporation_bank_code">NB1135</string>
    <string name="indian_bank_code">NB1143</string>
    <string name="yes_bank_code">NB1146</string>
    <string name="central_bank_code">NB1147</string>
    <string name="kotak_bank_code">NB1148</string>
    <string name="oriental_bank_code">NB1154</string>
    <string name="united_bank_code">NB1212</string>
    <string name="indian_overseas_bank_code">NB1213</string>
    <string name="city_union_bank_code">NB1215</string>
    <string name="union_bank_code">NB1216</string>
    <string name="canara_bank_code">NB1224</string>
    <string name="maharashtra_bank_code">NB1229</string>
    <string name="catholic_syrian_bank_code">NB1272</string>
    <string name="dhanlaxmi_bank_code">NB1373</string>
    <string name="andhra_bank_code">NB1378</string>
    <string name="vijaya_bank_code">NB1379</string>
    <string name="saraswat_bank_code">NB1380</string>
    <string name="pnb_bank_code">NB1381</string>
    <string name="uco_bank_code">NB1483</string>
    <string name="punjab_and_sindh_bank_code">NB1421</string>
    <string name="indusind_bank_code">NB1431</string>
    <string name="tamilnad_merchantile_bank_code">NB1439</string>
    <string name="cosmos_bank_code">NB1488</string>
    <string name="pnb_corporate_bank_code">NB1489</string>
    <string name="andhra_corporate_bank_code">NB1484</string>
    <string name="baroda_bank_code">NB1485</string>
    <string name="bahrain_and_kuwait_bank_code">NB1486</string>
    <string name="baroda_retail_bank_code">NB1487</string>
    <string name="dedusche_bank_code">NB1490</string>
    <string name="development_credit_bank_code">NB1491</string>
    <string name="dena_bank_code">NB1492</string>
    <string name="idbi_bank_code">NB1493</string>
    <string name="karur_vysya_bank_code">NB1494</string>
    <string name="laxmi_vilas_bank_code">NB1495</string>
    <string name="laxmi_vilas_bank_retail_code">NB1496</string>
    <string name="punjab_maharashtra_bank_code">NB1497</string>
    <string name="standard_chartered_bank_code">NB1498</string>
    <string name="south_indian_bank_code">NB1499</string>
    <string name="shamro_vithal_bank_code">NB1500</string>
    <string name="syndicate_bank_code">NB1501</string>
    <string name="tamil_nadu_state_coop_bank_code">NB1502</string>
    <string name="janata_sahakari_bank_code">NB1503</string>
    <string name="nkgsb_bank_code">NB1504</string>
    <string name="tjsb_bank_code">NB1505</string>
    <string name="kalyan_janata_bank_code">NB1506</string>
    <string name="mehsana_urban_bank_code">NB1507</string>
    <string name="bandhan_bank_code">NB1508</string>
    <string name="digibank_bank_code">NB1509</string>
    <string name="idfc_first_bank_code">NB1510</string>
    <string name="bassien_bank_code">NB1511</string>
    <string name="pnb_yuva_bank_code">NB1512</string>
    <string name="rbl_bank_code">NB1513</string>
    <string name="the_kalupur_bank_code">NB1514</string>
    <string name="equitas_bank_code">NB1515</string>
    <string name="thane_bharat_bank_code">NB1516</string>
    <string name="suryoday_bank_code">NB1517</string>
    <string name="esaf_bank_code">NB1518</string>
    <string name="varachha_bank_code">NB1519</string>
    <string name="north_east_bank_code">NB1520</string>
    <string name="idbi_corporate_bank_code">NB1521</string>
    <string name="yes_corporate_bank_code">NB1522</string>
    <string name="corporation_corporate_bank_code">NB1523</string>
    <string name="rbl_corporate_bank_code">NB1524</string>
    <string name="shamro_vithal_corporate_bank_code">NB1525</string>
    <string name="dhanlaxmi_corporate_bank_code">NB1526</string>
    <string name="barclays_bank_code">NB1527</string>
    <string name="zoroastrain_bank_code">NB1528</string>
    <string name="au_small_finance_bank_code">NB1529</string>
    <string name="allahabad_bank_code">NB1530</string>
    <string name="sbi_bank_code">NB1531</string>
    <string name="fincare_bank_code">NB1532</string>
    <string name="bandhan_bank_corporate_code">NB1533</string>
    <string name="karnataka_gramin_bank_code">NB1534</string>
    <string name="default_bank_code">0</string>
    <string name="allahabad_bank">Allahabad Bank</string>
    <string name="andhra_bank">Andhra Bank</string>
    <string name="au_small_finance_bank">AU Small Finance Bank</string>
    <string name="bank_of_india">Bank of India</string>
    <string name="canara_bank">Canara Bank</string>
    <string name="central_bank">Central Bank</string>
    <string name="corporation_bank">Corporation Bank</string>
    <string name="federal_bank">Federal Bank</string>
    <string name="idbi_bank">IDBI Bank</string>
    <string name="idfc_first">IDFC FIRST Bank</string>
    <string name="indian_bank">Indian Bank</string>
    <string name="karur_vysya_bank">Karur Vysya Bank</string>
    <string name="punjab_national_bank">Punjab National Bank</string>
    <string name="south_indian_bank">South Indian Bank</string>
    <string name="state_bank_of_india">State bank Of India</string>
    <string name="union_bank_of_india">Union Bank of India</string>
    <string name="yes_bank">Yes Bank</string>
    <string name="pay">Pay</string>
    <string name="cards">Cards</string>
    <string name="card_number">Card Number</string>
    <string name="card_holders_name">Card Holder\'s Name</string>
    <string name="full_name_on_card">Full Name on Card</string>
    <string name="enter_card_number">Enter Card Number</string>
    <string name="expiry_title">Expiry (MM/YY)</string>
    <string name="cvv_title">CVV</string>
    <string name="expiry">MM/YY</string>
    <string name="cvv">CVV</string>
    <string name="error_expiry">Invalid Expiry Date</string>
    <string name="error_cvv">Invalid CVV</string>
    <string name="proceed_to_pay">Proceed to Pay</string>
    <string-array name="pbp_top_bank">
        <item>@string/state_bank_of_india</item>
        <item>@string/punjab_national_bank</item>
        <item>@string/yes_bank</item>
    </string-array>
    <string-array name="pbp_bank">
        <item>@string/allahabad_bank</item>
        <item>@string/andhra_bank</item>
        <item>@string/au_small_finance_bank</item>
        <item>@string/bank_of_india</item>
        <item>@string/canara_bank</item>
        <item>@string/central_bank</item>
        <item>@string/corporation_bank</item>
        <item>@string/federal_bank</item>
        <item>@string/idbi_bank</item>
        <item>@string/idfc_first</item>
        <item>@string/indian_bank</item>
        <item>@string/karur_vysya_bank</item>
        <item>@string/punjab_national_bank</item>
        <item>@string/south_indian_bank</item>
        <item>@string/state_bank_of_india</item>
        <item>@string/union_bank_of_india</item>
        <item>@string/yes_bank</item>
    </string-array>
    <string name="netbanking_header">Netbanking</string>
    <string name="authenticate_otp">Authenticate Your Payment</string>
    <string name="otp_message">OTP sent to the mobile linked to your bank </string>
    <string name="enter_otp">Enter OTP</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="resend_otp_in">Resend OTP in</string>
    <string name="banks_website">Or, complete on your</string>
    <string name="website">bank’s website</string>
    <string name="auto_read">Waiting to auto-read OTP</string>
    <string name="lets_try_again">Let\'s try again</string>
    <string name="payment_didnt">Payment of </string>
    <string name="payment_didnt_go_through"> couldn\'t go through</string>
    <string name="retry_upi_header">Retry with another UPI app</string>
    <string name="retry_upi_content">Please ensure that the UPI app is installed on your phone before trying again.</string>
    <string name="view_other_upi_app">View other UPI apps</string>
    <string name="securely_save_card">Securely save this card as per </string>
    <string name="rbi_guideline"><b><u>RBI guidelines</u></b></string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="edit_contact_details">Edit contact details</string>
    <string name="mobile_number">Mobile No.</string>
    <string name="email_optional">Email ID (optional)</string>
    <string name="enter_mobile">Invalid Mobile Number</string>
    <string name="enter_email">Invalid Email ID</string>
    <string name="continue_">Continue</string>
    <string name="dcc_payment_opt">You opted to pay in </string>
    <string name="inr">INR</string>
    <string name="usd">USD</string>
</resources>