<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/curved_footer"
    android:backgroundTint="@color/white"
    android:paddingLeft="20dp"
    android:paddingTop="40dp"
    android:paddingRight="20dp"
    android:paddingBottom="20dp">

    <TextView
        android:id="@+id/txt_save_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:letterSpacing=".02"
        android:lines="2"
        android:paddingLeft="20dp"
        android:paddingRight="50dp"
        android:text="@string/edit_contact_details"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/x_icon"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_gravity="center"
        android:src="@drawable/cancel"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linear_mobile_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_save_card">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="5dp"
            android:alpha=".6"
            android:fontFamily="sans-serif-medium"
            android:paddingLeft="5dp"
            android:text="@string/mobile_number"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/layout_mobile_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_default_border"
                app:layout_constraintLeft_toLeftOf="@+id/card_pbp"
                app:layout_constraintRight_toRightOf="@+id/card_pbp"
                app:layout_constraintTop_toBottomOf="@+id/txt_mobile_number">

                <TextView
                    android:id="@+id/txt_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="10dp"
                    android:textStyle="bold"
                    android:padding="5dp"
                    android:text="@string/mobile_code"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/edt_mobile_number"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_toRightOf="@+id/txt_code"
                    android:background="@null"
                    android:ems="10"
                    android:maxLength="10"
                    android:fontFamily="sans-serif-medium"
                    android:hint="@string/enter_mobile_number"
                    android:inputType="number"
                    android:padding="12dp"
                    android:text=""
                    android:textColor="@color/black"
                    android:textColorHint="@color/shimmer_grey"
                    android:textSize="16sp"/>

            </RelativeLayout>


            <!-- Card Number Error Message -->
            <TextView
                android:id="@+id/tvMobileNumberError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/enter_mobile"
                android:textColor="@color/red"
                android:textSize="14sp"
                android:visibility="gone" /> <!-- Initially hidden -->

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_mobile_number">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="5dp"
            android:alpha=".6"
            android:fontFamily="sans-serif-medium"
            android:paddingLeft="5dp"
            android:text="@string/email_optional"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/edittext_default_border"
                android:fontFamily="sans-serif-medium"
                android:hint="@string/enter_email"
                android:inputType="textEmailAddress"
                android:padding="12dp"
                android:text=""
                android:textColor="@color/black"
                android:textColorHint="@color/shimmer_grey"
                android:textSize="16sp" />

            <!-- Card Number Error Message -->
            <TextView
                android:id="@+id/tvEmailError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/enter_email"
                android:textColor="@color/red"
                android:textSize="14sp"
                android:visibility="invisible" /> <!-- Initially hidden -->

        </LinearLayout>

        <!-- Proceed to Pay Button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnProceedToPay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:backgroundTint="@null"
            android:drawablePadding="8dp"
            android:enabled="false"
            android:fontFamily="sans-serif-medium"
            android:paddingLeft="81dp"
            android:paddingTop="10dp"
            android:paddingRight="81dp"
            android:paddingBottom="10dp"
            android:text="@string/continue_"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="17sp"
            app:backgroundTint="@null" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>