<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_dcc_success"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_corner"
    android:backgroundTint="@color/shimmer_grey"
    android:padding="20dp"
    android:visibility="gone">

    <ImageView
        android:id="@+id/img_unlock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/info"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_dcc_header_opt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/dcc_payment_opt"
        android:textColor="@color/black"
        android:textFontWeight="400"
        android:textSize="14sp"
        app:layout_constraintLeft_toRightOf="@+id/img_unlock"
        app:layout_constraintTop_toTopOf="@+id/img_unlock" />

    <TextView
        android:id="@+id/txt_inr"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:alpha=".8"
        android:fontFamily="sans-serif"
        android:text="@string/inr"
        android:textColor="@color/black"
        android:textFontWeight="500"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="@+id/txt_dcc_header_opt"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_dcc_header_opt" />

    <TextView
        android:id="@+id/txt_usd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:alpha=".8"
        android:fontFamily="sans-serif"
        android:text="@string/usd"
        android:textColor="@color/black"
        android:textFontWeight="500"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="@+id/txt_dcc_header_opt"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_inr" />

</androidx.constraintlayout.widget.ConstraintLayout>