<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/curved_footer"
    android:backgroundTint="@color/white"
    android:paddingBottom="40dp">

    <ImageView
        android:id="@+id/x_icon"
        android:layout_width="26dp"
        android:layout_height="26dp"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:src="@drawable/cancel"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:textStyle="bold"
        android:text="@string/retry_upi_header"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_installed_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="40dp"
        android:alpha=".8"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/retry_upi_content"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="@+id/txt_heading"
        app:layout_constraintRight_toRightOf="@+id/txt_heading"
        app:layout_constraintTop_toBottomOf="@+id/txt_heading" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_upi_apps"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/rounded_corner"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_installed_app" />

    <View
        android:id="@+id/view_seperator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:background="@color/shimmer_grey"
        app:layout_constraintLeft_toLeftOf="@+id/recycler_upi_apps"
        app:layout_constraintRight_toRightOf="@+id/recycler_upi_apps"
        app:layout_constraintTop_toBottomOf="@+id/recycler_upi_apps" />

    <TextView
        android:id="@+id/txt_view_other_upi_apps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/view_other_upi_app"
        android:textColor="@color/header_color"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_seperator" />

</androidx.constraintlayout.widget.ConstraintLayout>